Don't delete the "Advanced" popup menu without intentions of recreating it.

BUG: 116913

svn path=/branches/KDE/3.5/kdenetwork/krdc/; revision=562938